--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,3 +1,29 @@
-.masthead-avatar {
+.masthead .masthead-avatar {
   border-radius: 50%;
 }
+
+@media (min-width:576px) {
+  .masthead .masthead-avatar {
+    border-radius: 50%;
+    width: 15rem !important;
+    height: 15rem !important;
+  }
+ }
+ @media (min-width:768px) {
+  .masthead .masthead-avatar {
+    width: 20rem !important;
+    height: 20rem !important;
+  }
+ }
+ @media (min-width:992px) {
+  .masthead .masthead-avatar {
+    width: 25rem !important;
+    height: 25rem !important;
+  }
+ }
+ @media (min-width:1200px) {
+  .masthead .masthead-avatar {
+    width: 30rem !important;
+    height: 30rem !important;
+  }
+ }
